Axtualizacion de planeacion

--- a/Concretec.Pedidos.BC/App.config
+++ b/Concretec.Pedidos.BC/App.config
@@ -6,7 +6,7 @@
     <add key="conexionCB2Local" value="Password=Pato12345;Persist Security Info=True;User ID=sa;Initial Catalog=LogCB2;Data Source=localhost\sqlexpress"/>  
     <add key="MaxUsers" value="50"/>
 
-    <add key="cnConcretec" value="Password=Pato12345;Persist Security Info=True;User ID=sa;Initial Catalog=Pedidos;Data Source=localhost"/>
+    <add key="cnConcretec" value="Password=Pato12345;Persist Security Info=True;User ID=sa;Initial Catalog=Pedidos;Data Source=18.207.42.217"/>
     <add key="cnAspelSQLMTY" value="server=cloudwaremx.cloudapp.net;database=SQLEMPRESA01;uid=sa;pwd=Pato12345;"/>
     <add key="cnAspelSQLAGS" value="server=localhost;database=SQLEMPRESA02;uid=sa;pwd=Pato12345;"/>
     <add key="cnAspelSQLGDL" value="server=localhost\sql2008r2;database=SQLEMPRESA03;uid=sa;pwd=gvt070725;"/>
