--- a/Concretec.UI/web.config
+++ b/Concretec.UI/web.config
@@ -21,17 +21,13 @@
     <add key="Config.Desfase" value="10"/>
     <add key="Config.Carga" value="7"/>
     <add key="Telerik.AsyncUpload.TemporaryFolder" value="D:\CargaCB2\"/>
-    <add key="conexion" value="Password=pedidos;Persist Security Info=True;User ID=pedidos;Initial Catalog=Pedidos;Data Source=localhost"/>
+    <add key="conexion" value="Password=pedidos;Persist Security Info=True;User ID=pedidos;Initial Catalog=Pedidos;Data Source=18.207.42.217"/>
     <add key="archivo" value="C:\\Concretec\\ProgramacionPedidos"/>
-    <add key="cnConcretec" value="Password=pedidos;Persist Security Info=True;User ID=pedidos;Initial Catalog=Pedidos;Data Source=localhost"/>
-    <add key="cnAspelSQLMTY" value="server=cloudwaremx.cloudapp.net;database=SQLEMPRESA01;uid=sa;pwd=Pato12345;"/>
-    <add key="cnAspelSQLAGS" value="server=localhost;database=SQLEMPRESA02;uid=sa;pwd=Pato12345;"/>
-    <add key="cnAspelSQLGDL" value="server=localhost\sql2008r2;database=SQLEMPRESA03;uid=sa;pwd=gvt070725;"/>
-    <add key="cnAspelSQLLEON" value="server=localhost;database=SQLEMPRESA04;uid=sa;pwd=Pato12345;"/>
-    <add key="cnAspelSQLPUEBLA" value="server=localhost;database=SQLEMPRESA05;uid=sa;pwd=Pato12345;"/>
-    <add key="cnAspelSQLQRO" value="server=localhost;database=SQLEMPRESA06;uid=sa;pwd=Pato12345;"/>
+    
+	  <add key="cnConcretec" value="Password=pedidos;Persist Security Info=True;User ID=pedidos;Initial Catalog=Pedidos;Data Source=18.207.42.217"/>
     <add key="cnAzureSync" value="server=13.85.25.9;database=SyncConcretos;uid=sa;pwd=M4r10b4rr0n$;"/>
-    <add key="Telerik.Skin" value="Metro"/>
+    
+	  <add key="Telerik.Skin" value="Metro"/>
     <add key="Telerik.ScriptManager.TelerikCdn" value="Disabled"/>
     <add key="Telerik.StyleSheetManager.TelerikCdn" value="Disabled"/>
     <add key="conexionCB2Azure" value="Server=tcp:bhxvd2wx7t.database.windows.net,1433;Database=tlaloc;User ID=cloudware@bhxvd2wx7t;Password=Pato12345;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"/>
